# thefuck-contrib-openai

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
thefuck_contrib_openai/rules/: openapi.py
